Preloader color change

--- a/css/style.css
+++ b/css/style.css
@@ -7338,7 +7338,7 @@ p.ceb-single {
   border-radius: 999px;
 }
 #status span:nth-child(1) {
-  border: 5px solid #dcf836;
+  border: 5px solid #00b5ff;
   border-top: 5px solid transparent;
   width: 70px;
   height: 70px;
